# gazebo_custom_plugins

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  package.xml
.cache/clangd/index/: ros2_to_gz_transport.cpp.66E9ED50109C2D02.idx  ros2_to_gz_transport.hpp.698CD4A930BD44D4.idx
include/gazebo_custom_plugins/: CommandPitchAngle.pb.h  VppState.pb.h  gazebo_motor_model_vpp.hpp  ros2_to_gz_transport.hpp
include/gazebo_custom_plugins/vpp_motor/: CP_data.h  CT_data.h  gazebo_vpp_motor.h  propeller.h
launch/: run_gazebo.launch.py
models/tailsitter_vpp/: model.config  tailsitter_vpp.sdf
msgs/: CommandPitchAngle.proto  VppState.proto
src/: gazebo_motor_model_vpp.cpp  ros2_to_gz_transport.cpp
src/vpp_motor/: gazebo_vpp_motor.cpp
worlds/: tof_demo.world
